fix horizontal scroll error

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,6 +1,7 @@
 :local .base {
   content: '';
   display: block;
+  overflow: hidden;
 }
 
 :local .banner {
